error3.log
    Checking ranvier-http v0.14.2 (F:\project\ranvier\ranvier-workspace\ranvier\http)
error[E0425]: cannot find value `alt_svc_h3_port` in this scope
    --> http\src\ingress.rs:1428:55
     |
1428 | ...                   #[cfg(feature = "http3")] alt_svc_h3_port,
     |                                                 ^^^^^^^^^^^^^^^
     |
help: you might have meant to use the available field
     |
1428 |                             #[cfg(feature = "http3")] self.alt_svc_h3_port,
     |                                                       +++++

error[E0425]: cannot find value `body_stream` in this scope
   --> http\src\http3.rs:178:37
    |
178 |             while let Some(frame) = body_stream.frame().await {
    |                                     ^^^^^^^^^^^ not found in this scope

warning: unused import: `DEFAULT_BODY_LIMIT`
  --> http\src\extract\multipart.rs:21:40
   |
21 | use super::{ExtractError, FromRequest, DEFAULT_BODY_LIMIT};
   |                                        ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Response` and `header::CONTENT_TYPE`
 --> http\src\sse.rs:2:12
  |
2 | use http::{header::CONTENT_TYPE, Response};
  |            ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^

warning: unused imports: `BodyExt` and `StreamBody`
 --> http\src\sse.rs:3:22
  |
3 | use http_body_util::{StreamBody, BodyExt};
  |                      ^^^^^^^^^^  ^^^^^^^

warning: unused import: `StreamExt`
 --> http\src\sse.rs:7:36
  |
7 | use futures_util::stream::{Stream, StreamExt};
  |                                    ^^^^^^^^^

error[E0599]: no method named `resolve` found for struct `RequestResolver<C, B>` in the current scope
   --> http\src\http3.rs:116:32
    |
116 |                 match resolver.resolve().await {
    |                                ^^^^^^^ method not found in `RequestResolver<h3_quinn::Connection, _>`

warning: variable does not need to be mutable
  --> http\src\http3.rs:52:47
   |
52 | pub async fn serve<S, B>(config: Http3Config, mut service: S) -> Result<(), Box<dyn std::error::Error + Send + Sync + 'static>>
   |                                               ----^^^^^^^
   |                                               |
   |                                               help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0282]: type annotations needed
   --> http\src\http3.rs:180:25
    |
180 |                     let mut frame = frame;
    |                         ^^^^^^^^^
181 |                     if let Ok(data) = frame.into_data().map_err(|_| "not data") {
    |                                       ----- type must be known at this point
    |
help: consider giving `frame` an explicit type
    |
180 |                     let mut frame: /* Type */ = frame;
    |                                  ++++++++++++

warning: irrefutable `if let` pattern
    --> http\src\ingress.rs:1549:24
     |
1549 |                     if let Ok(ref mut r) = res {
     |                        ^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: this pattern will always match, so the `if let` is useless
     = help: consider replacing the `if let` with a `let`
     = note: `#[warn(irrefutable_let_patterns)]` on by default

warning: irrefutable `if let` pattern
    --> http\src\ingress.rs:1584:20
     |
1584 |                 if let Ok(ref mut r) = fallback_res {
     |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: this pattern will always match, so the `if let` is useless
     = help: consider replacing the `if let` with a `let`

Some errors have detailed explanations: E0282, E0425, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `ranvier-http` (lib) generated 7 warnings
error: could not compile `ranvier-http` (lib) due to 4 previous errors; 7 warnings emitted
